# hub-api

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.py  compose.yml  docker-compose.yml  fly.toml  justfile  log_config.json  pyproject.toml  schemathesis.toml  tach.toml
.github/: renovate.json5
.github/workflows/: constraints.txt  pre-commit.yml  schematesis.yml  tests.yml
.github/workflows/resources/: constraints.txt  requirements.txt
app/: __init__.py  crud.py  main.py  models.py
app/api/api_v1/: api.py  schemas.py
app/api/api_v1/endpoints/: plugins.py
app/helpers/: database.py  files.py
src/hub_api/: client.py  crud.py  database.py  dependencies.py  enums.py  etag.py  exceptions.py  ids.py  main.py  models.py  schema.sql  schemas.py
src/hub_api/api/: __init__.py
src/hub_api/api/api_v1/: __init__.py  api.py  schemas.py
src/hub_api/api/api_v1/endpoints/: __init__.py  maintainers.py  plugins.py
src/hub_api/helpers/: __init__.py  compatibility.py  database.py  etag.py  files.py
src/hub_api/litestar_app/: app.py  dependencies.py  plugins.py
src/hub_api/schemas/: api.py  meltano.py  validation.py
tests/: conftest.py
tests/app/: test_app.py  test_hub.py
tests/app/__snapshots__/test_app/: test_openapi_spec.json  test_plugin_details[dbt-postgres-utilities-dbt-labs][dbt-postgres].json  test_plugin_details[tap-adwords-extractors-meltano][tap-adwords].json  test_plugin_details[tap-github-extractors-singer-io][tap-github].json  test_plugin_details[tap-mssql-extractors-airbyte][tap-mssql].json  test_plugin_details[tap-mssql-extractors-wintersrd][tap-mssql].json  test_plugin_details[target-postgres-loaders-meltanolabs][target-postgres].json
tests/app/helpers/: test_database.py  test_files.py
tests/fixtures/plugins/extractors/: index  tap-github--singer-io
tests/litestar/: test_api.py
