[tool.poetry]
name = "hub-api"
version = "0.1.0"
description = ""
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "==0.109.2"
aiosqlite = "==0.19.0"
uvicorn = "==0.27.1"
aiofiles = { version = "==23.2.1", python = "<4" }
PyYAML = "==6.0.1"
SQLAlchemy = { version = "==2.0.27", extras = ["asyncio"] }

[tool.poetry.group.dev.dependencies]
httpx = "==0.26.0"
pytest = "==8.0.0"
pytest-asyncio = "<0.23"
requests = "==2.31.0"
types-PyYAML = "==6.0.12.12"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",      # PyFlakes
    "W",      # pycodestyle (Warning)
    "E",      # pycodestyle (Error)
    "C90",    # mccabe
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
